--- a/lib/Makefile
+++ b/lib/Makefile
@@ -5,32 +5,8 @@
 ## Makefile
 ##
 
-SRC_SFML	=	AbstractGraph.cpp	\
-				SFML/Sfml.cpp
-
-SRC_SDL		=	AbstractGraph.cpp	\
-				SDL/Sdl.cpp
-
-SRC_NCURSES	=	AbstractGraph.cpp	\
-
-OBJ_SDL		=	$(SRC_SDL:.cpp=.o)
-OBJ_SFML 	=	$(SRC_SFML:.cpp=.o)
-OBJ_NCURSES	=	$(SRC_NCURSES:.cpp=.o)
-
-SDL 	=	lib_arcade_sdl.so
-SFML 	=	lib_arcade_sfml.so
-NCURSES =	lib_arcade_ncurses.so
-
-CFLAGS +=	-W -Wall -Wextra -Werror -Wpedantic
-
-all: $(NCURSES)
-
-%.o : %.cpp
-		g++ -fPIC -c -Wall $(SRC_NCURSES)
-
-$(NCURSES):	$(OBJ_NCURSES)
-		@echo "Compiling..."
-		ld -shared $(OBJ_NCURSES) -o $(NCURSES)
+all:
+	make -C ./NCURSES
 
 clean:
 	rm -f *.o
@@ -39,9 +15,7 @@ clean:
 	rm -f SFML/*.o
 
 fclean:	clean
-	rm -f $(SDL)
-	rm -f $(SFML)
-	rm -f $(NCURSES)
+	make fclean -C ./NCURSES
 
 re: fclean all
 
