--- a/lib/Makefile
+++ b/lib/Makefile
@@ -9,15 +9,9 @@ all:
 	make -C ./NCURSES
 
 clean:
-	rm -f *.o
-	rm -f NCURSES/*.o
-	rm -f SDL/*.o
-	rm -f SFML/*.o
+	make clean -C ./NCURSES
 
 fclean:	clean
 	make fclean -C ./NCURSES
 
 re: fclean all
-
-debug:	CFLAGS += -g
-debug:	fclean all
