[MOD] lib/SDL/Makefile lib/SFML/Makefile lib/Makefile
add and modify the makefile for lib
add 3 new makefile for compiling each shared library

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -7,11 +7,17 @@
 
 all:
 	make -C ./NCURSES
+	make -C ./SDL
+	make -C ./SFML
 
 clean:
 	make clean -C ./NCURSES
+	make clean -C ./SDL
+	make clean -C ./SFML
 
 fclean:	clean
 	make fclean -C ./NCURSES
+	make fclean -C ./SDL
+	make fclean -C ./SFML
 
 re: fclean all
